# asviglager

./: .gitignore  README.md  X_TBL_EXTERNALREFS.sql  X_TBL_VALUES.sql  X_TBL_external_references.sql  container_types.sql  container_values.sql  create_sqlite_db.py  dc_extracted.sql  fetch_products_api.py  inventory.db  main.py  product-schema.json  pyproject.toml  warehouse-prompt.txt
ARCHIVE/: X_TBL_TAGS.sql  container.sql  convert_hsqldb_to_sqlite.py  create_schema_only.py  create_sqlite_db_verbose.py  dc.script  dcjph-pictures.sql  import_x_tbl_values.py  papnaeb.sql  product-table.sql  setup_android_sdk.sh  tags.sql
app/: README.md  build_with_increment.sh  increment_build.sh  letsmerge.txt  move_to_drive.sh  pubspec.yaml
app/lib/: main.dart
backend/: .env.example  .gitignore  PHOTO_API.md  README.md  pyproject.toml  run.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  photos.py  products.py  warehouses.py
backend/app/core/: config.py  security.py
backend/app/db/: indexes.py  mongodb.py
backend/app/models/: photo.py  product.py  user.py  warehouse.py
backend/scripts/: create_admin.py  import_dolibarr_products.py  migrate_warehouse_hierarchy.py  verify_import.py
doli/: PHOTO_IMPORT_SUMMARY.md  README_PHOTO_IMPORT.md  categories.json  documents.json  download_documents.py  fetch_product_categories.py  fetch_products_api.py  import_categories.py  import_photos.py  import_products.py  product_categories.txt  products.json  test.txt
frontend/: .env.development  .env.production  QUICKSTART.md  README.md  package-lock.json  package.json
(+60 files in other folders)
